--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,23 @@
-name: Test Build
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
 jobs:
   build:
-    name: 'Test Build'
-    runs-on: ubuntu-latest
+    name: Test Build
+    runs-on: self-hosted
     steps:
-      - name: 'checkout'
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-java@v4
-        name: 'Setup JDK'
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Build with Gradle
-        run: ./gradlew bootJar
+    - continue-on-error: true
+      name: checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - continue-on-error: true
+      name: Setup JDK
+      uses: actions/setup-java@v4
+      with:
+        distribution: zulu
+        java-version: '17'
+    - continue-on-error: true
+      name: Build with Gradle
+      run: ./gradlew bootJar
+name: Test Build
+on:
+  repository_dispatch:
+    types: trigger-ga___ci.yml
