--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,26 +1,23 @@
-# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
-name: Gradle Package
-
-on:
-  release:
-    types: [created]
-
 jobs:
   build:
-    name: 'Test Build'
-    runs-on: ubuntu-latest
+    name: Test Build
+    runs-on: self-hosted
     steps:
-      - name: 'checkout'
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-java@v4
-        name: 'Setup JDK'
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Build with Gradle
-        run: ./gradlew bootJar
+    - continue-on-error: true
+      name: checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - continue-on-error: true
+      name: Setup JDK
+      uses: actions/setup-java@v4
+      with:
+        distribution: zulu
+        java-version: '17'
+    - continue-on-error: true
+      name: Build with Gradle
+      run: ./gradlew bootJar
+name: Gradle Package
+on:
+  repository_dispatch:
+    types: trigger-ga___gradle-publish.yml
